--- a/templates/count.html
+++ b/templates/count.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 <h1>总字数为{{ count }}字</h1>
+<br>
+<a href="..">回到主页</a>
+<br>
 <h2>你的文本</h2>
 {{ text }}
 <br>
@@ -14,5 +17,6 @@
 {{ word }} - {{ count }}
 <br>
 {% endfor %}
+
 </body>
 </html>
