--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-<h1>字数统计</h1>
+<h1>字数统计</h1><a href="about">关于本页</a>
 <form action="count">
     <textarea cols=100 rows=25 name="text">123</textarea>
     <br>
